--- a/src/main/webapp/WEB-INF/pages/default/test/layout_static.html
+++ b/src/main/webapp/WEB-INF/pages/default/test/layout_static.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org">
  <!--  <head th:include="include/head2::header"> </head>-->
  <head> 
   <title>LAYOUT</title>  
